# 5b_vector

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/matrix_test/: matrix_test.c  matrix_test.h
libs/data_structures/string_/: string_.c  string_.h
libs/data_structures/string__test/: string__test.c  string__test.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vector_void/: vector_void.c  vector_void.h
